# a-paxos-core

./: BUILDING.md  CMakeLists.txt  Dockerfile  MULTI-PAXOS-PROTOCOL.md  NOTICE  README.md  build.sh  scaffold.yaml
include/a-paxos-core/: paxos.h
src/: paxos_acceptor.c  paxos_core.c  paxos_internal.h  paxos_log.c  paxos_proposer.c
tests/: CMakeLists.txt
tests/src/: test_paxos_advanced_memory.c  test_paxos_batching_and_validation.c  test_paxos_catchup.c  test_paxos_chosen_invariants.c  test_paxos_compaction_boundaries.c  test_paxos_crash_lifecycle.c  test_paxos_dedup.c  test_paxos_final_review.c  test_paxos_firewall.c  test_paxos_joint_consensus.c  test_paxos_learner_firewall.c  test_paxos_malformed_configs.c  test_paxos_memory.c  test_paxos_persistance_races.c  test_paxos_phase1.c  test_paxos_phase2.c  test_paxos_protocol_edges.c  test_paxos_reads.c  test_paxos_reconfig.c  test_paxos_reconfig_crash_restore.c  test_paxos_reconfig_safety.c  test_paxos_recovery_limits.c  test_paxos_restore.c  test_paxos_simulator.c  test_paxos_snapshot.c  test_paxos_strict_safety.c
